src/objects/Geo_Data_Map__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Regional_Sales_Manager__c</fullName>
        <label>Flow Regional Sales Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flow_Territory__c</fullName>
        <label>Flow Territory</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ST__c</fullName>
        <label>ST</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UAccount_Manager__c</fullName>
        <label>UAccount Manager</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uterritory_2__c</fullName>
        <label>Uterritory 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Uterritory_Name__c</fullName>
        <label>Uterritory Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip3__c</fullName>
        <label>Zip3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geo Data Map</label>
    <listViews>
        <fullName>All</fullName>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Flow_Territory__c</columns>
        <columns>Flow_Regional_Sales_Manager__c</columns>
        <columns>Uterritory_Name__c</columns>
        <columns>UAccount_Manager__c</columns>
        <columns>Uterritory_2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Flow_Central_Territory</fullName>
        <columns>Zip_Code__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Flow_Territory__c</columns>
        <columns>Flow_Regional_Sales_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flow_Territory__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <label>Flow Central Territory</label>
    </listViews>
    <listViews>
        <fullName>Flow_East_Territory</fullName>
        <columns>Zip_Code__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Flow_Territory__c</columns>
        <columns>Flow_Regional_Sales_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flow_Territory__c</field>
            <operation>equals</operation>
            <value>Northeast</value>
        </filters>
        <label>Flow North East Territory</label>
    </listViews>
    <listViews>
        <fullName>Flow_MidWest_Territory</fullName>
        <columns>Zip_Code__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Flow_Territory__c</columns>
        <columns>Flow_Regional_Sales_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flow_Territory__c</field>
            <operation>equals</operation>
            <value>Midwest</value>
        </filters>
        <label>Flow MidWest Territory</label>
    </listViews>
    <listViews>
        <fullName>Flow_South_Territory</fullName>
        <columns>Zip_Code__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Flow_Territory__c</columns>
        <columns>Flow_Regional_Sales_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flow_Territory__c</field>
            <operation>equals</operation>
            <value>South</value>
        </filters>
        <label>Flow South Territory</label>
    </listViews>
    <listViews>
        <fullName>Flow_Southeast_Territory</fullName>
        <columns>Zip_Code__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Flow_Territory__c</columns>
        <columns>Flow_Regional_Sales_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flow_Territory__c</field>
            <operation>equals</operation>
            <value>Southeast</value>
        </filters>
        <label>Flow Southeast Territory</label>
    </listViews>
    <listViews>
        <fullName>Flow_West_Territory</fullName>
        <columns>Zip_Code__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Flow_Territory__c</columns>
        <columns>Flow_Regional_Sales_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Flow_Territory__c</field>
            <operation>equals</operation>
            <value>West</value>
        </filters>
        <label>Flow West Territory</label>
    </listViews>
    <listViews>
        <fullName>Utility_Central_Territory</fullName>
        <columns>Uterritory_Name__c</columns>
        <columns>Uterritory_2__c</columns>
        <columns>UAccount_Manager__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>City__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Uterritory_Name__c</field>
            <operation>equals</operation>
            <value>Central</value>
        </filters>
        <label>Utility Central Territory</label>
    </listViews>
    <listViews>
        <fullName>Utility_East_Territory</fullName>
        <columns>Uterritory_Name__c</columns>
        <columns>Uterritory_2__c</columns>
        <columns>UAccount_Manager__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Uterritory_Name__c</field>
            <operation>equals</operation>
            <value>East</value>
        </filters>
        <label>Utility East Territory</label>
    </listViews>
    <listViews>
        <fullName>Utility_West_Territory</fullName>
        <columns>Uterritory_Name__c</columns>
        <columns>Uterritory_2__c</columns>
        <columns>UAccount_Manager__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Uterritory_Name__c</field>
            <operation>equals</operation>
            <value>West</value>
        </filters>
        <label>Utility West Territory</label>
    </listViews>
    <nameField>
        <label>Geo Data Map Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geo Data Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>